优化linux下的shell脚本